Website Update - attendees page added

--- a/views/page-home.twig
+++ b/views/page-home.twig
@@ -258,8 +258,8 @@
 
 <section id="signup" class="py-16 lg:py-20 px-4 md:px-14 flex flex-col xl:container mx-auto">
     <h2 class="text-4xl sm:text-5xl md:text-7xl text-red font-black uppercase mb-8 mt-20">Say Less. I'm In.</h2>
-    <p class="text-3xl md:text-4xl text-black font-bold mt-0">Run This Town 2025 - CDMX is currently sold out!</p>
-    <p class="text-2xl md:text-3xl font-medium text-black mt-0 italic">Thank you SO SO MUCH for helping us sell out in less than two days!</p>
+    <p class="text-3xl md:text-4xl text-black font-bold mt-0">Join us for Run This Town 2026!</p>
+    <p class="text-2xl md:text-3xl font-medium text-black mt-0 italic">Registration will open in a few months.</p>
     {# <p class="text-2xl md:text-3xl font-medium text-black mt-0">Yes!! Fill out this form and we'll send you the next steps including where to send your deposit!</p> #}
     <div>
         {# {{ function('do_shortcode', '[formidable id=3]') }} #}
@@ -271,7 +271,7 @@
         </div>
         <div class="w-full lg:w-6/12 xl:w-7/12 lg:ps-0 xl:ps-20">
             <h2 class="text-4xl sm:text-5xl md:text-7xl text-green font-black uppercase mb-8 mt-0">Interested??</h2>
-            <p class="text-2xl md:text-3xl font-medium text-black mt-0">Our trip is currently full, but if you want to stay in the loop, fill out this form to keep in touch! We may open more spots!</p>
+            <p class="text-2xl md:text-3xl font-medium text-black mt-0">If you want to stay in the loop, fill out this form to keep in touch! You will be the first to know when registration for 2026 opens.</p>
             <div>
                 {{ function('do_shortcode', '[formidable id=2]') }}
             </div>
