--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@ html body {
     text-decoration: none;
     font-weight: 800;
 }
-
+body {
+    color: #222;
+}
 .text-10xl {
     font-size: 10rem;
 }
