--- a/output.css
+++ b/output.css
@@ -142,6 +142,10 @@
   }
 }
 
+.\!static {
+  position: static !important;
+}
+
 .absolute {
   position: absolute;
 }
@@ -158,8 +162,20 @@
   top: -5rem;
 }
 
+.right-12 {
+  right: 3rem;
+}
+
 .z-10 {
   z-index: 10;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.m-2 {
+  margin: 0.5rem;
 }
 
 .mx-auto {
@@ -182,12 +198,25 @@
   margin-bottom: 0.5rem;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.-mt-24 {
+  margin-top: -6rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
 
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .mb-20 {
@@ -202,8 +231,16 @@
   margin-bottom: 1rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.ms-2 {
+  margin-inline-start: 0.5rem;
 }
 
 .mt-0 {
@@ -226,8 +263,24 @@
   margin-top: 1rem;
 }
 
+.mt-52 {
+  margin-top: 13rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.-mt-16 {
+  margin-top: -4rem;
+}
+
+.-mt-20 {
+  margin-top: -5rem;
 }
 
 .box-border {
@@ -250,12 +303,20 @@
   display: none;
 }
 
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
 .h-1\/2 {
   height: 50%;
 }
 
 .h-\[200px\] {
   height: 200px;
+}
+
+.h-\[800px\] {
+  height: 800px;
 }
 
 .h-auto {
@@ -270,16 +331,36 @@
   height: 100svh;
 }
 
-.max-h-\[200px\] {
-  max-height: 200px;
+.max-h-\[500px\] {
+  max-height: 500px;
 }
 
 .max-h-\[700px\] {
   max-height: 700px;
 }
 
+.min-h-\[900px\] {
+  min-height: 900px;
+}
+
+.min-h-full {
+  min-height: 100%;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.min-h-\[800px\] {
+  min-height: 800px;
+}
+
 .w-10\/12 {
   width: 83.333333%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .w-4\/12 {
@@ -294,8 +375,8 @@
   width: 50%;
 }
 
-.w-auto {
-  width: auto;
+.w-7\/12 {
+  width: 58.333333%;
 }
 
 .w-full {
@@ -304,6 +385,38 @@
 
 .max-w-20 {
   max-width: 5rem;
+}
+
+.max-w-screen-xl {
+  max-width: 1280px;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
+.max-w-full {
+  max-width: 100%;
+}
+
+.-rotate-3 {
+  --tw-rotate: -3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-3 {
+  --tw-rotate: 3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[3deg\] {
+  --tw-rotate: 3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-1 {
+  --tw-rotate: 1deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -330,6 +443,14 @@
   align-items: center;
 }
 
+.items-stretch {
+  align-items: stretch;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -343,6 +464,11 @@
        column-gap: 7rem;
 }
 
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
 .gap-x-8 {
   -moz-column-gap: 2rem;
        column-gap: 2rem;
@@ -352,17 +478,28 @@
   row-gap: 2.5rem;
 }
 
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
 .gap-y-8 {
   row-gap: 2rem;
 }
 
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded-2xl {
@@ -377,6 +514,10 @@
   border-radius: 0.75rem;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -385,9 +526,19 @@
   border-style: solid;
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 34 34 / var(--tw-border-opacity));
+}
+
 .border-green {
   --tw-border-opacity: 1;
   border-color: rgb(4 118 88 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(247 247 247 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -399,6 +550,11 @@
   background-color: rgb(34 34 34 / 0.5);
 }
 
+.bg-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 77 161 / var(--tw-bg-opacity));
+}
+
 .bg-green {
   --tw-bg-opacity: 1;
   background-color: rgb(4 118 88 / var(--tw-bg-opacity));
@@ -407,6 +563,11 @@
 .bg-red {
   --tw-bg-opacity: 1;
   background-color: rgb(238 56 35 / var(--tw-bg-opacity));
+}
+
+.bg-tan {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 229 192 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -422,8 +583,29 @@
      object-fit: cover;
 }
 
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
+
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-2 {
@@ -481,6 +663,11 @@
   padding-bottom: 1rem;
 }
 
+.py-40 {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -488,6 +675,14 @@
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .ps-4 {
@@ -524,6 +719,11 @@
 
 .text-6xl {
   font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
   line-height: 1;
 }
 
@@ -579,6 +779,14 @@
   font-style: italic;
 }
 
+.leading-normal {
+  line-height: 1.5;
+}
+
+.leading-tight {
+  line-height: 1.25;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(34 34 34 / var(--tw-text-opacity));
@@ -599,14 +807,28 @@
   color: rgb(4 118 88 / var(--tw-text-opacity));
 }
 
+.text-light-blue {
+  --tw-text-opacity: 1;
+  color: rgb(164 206 254 / var(--tw-text-opacity));
+}
+
 .text-red {
   --tw-text-opacity: 1;
   color: rgb(238 56 35 / var(--tw-text-opacity));
 }
 
+.text-tan {
+  --tw-text-opacity: 1;
+  color: rgb(255 229 192 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(247 247 247 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .no-underline {
@@ -621,6 +843,12 @@
   background-blend-mode: overlay;
 }
 
+.shadow-\[-5px_5px_0_\#222\] {
+  --tw-shadow: -5px 5px 0 #222;
+  --tw-shadow-colored: -5px 5px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -633,8 +861,41 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+:root {
+  --red: #EE3823;
+  --orange: #f39b5a;
+  --gold: #F5AF00;
+  --green: #047658;
+  --blue: #024DA1;
+  --light-blue: #A4CEFE;
+  --tan: #FFE5C0;
+  --black: #222222;
+  --white: #f7f7f7;
+}
+
 html {
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 html body {
@@ -644,15 +905,15 @@ html body {
 }
 
 .swiper-slide {
-  background-color: #eeeeee;
-  justify-content: center;
-  align-items: center;
-  display: flex!important;
+  /* background-color: #eeeeee;
+    justify-content: center;
+    align-items: center;
+    display: flex!important; */
 }
 
-.swiper-slide img {
-  max-height: 80%;
-}
+/* .swiper-slide img {
+    max-height: 80%;
+} */
 
 .overlay {
   z-index: 2;
@@ -677,9 +938,22 @@ html body {
 
 .btn {
   padding: 10px 20px;
-  border-radius: 20px;
   text-decoration: none;
   font-weight: 800;
+  text-transform: uppercase;
+}
+
+.btn-tan {
+  background-color: var(--tan);
+  border: 1px solid var(--black);
+  box-shadow: -5px 5px 0px 0px #222;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+  transition-property: all;
+}
+
+.btn-tan:hover {
+  box-shadow: -2px 2px 0px 0px #222;
 }
 
 body {
@@ -713,15 +987,18 @@ a:hover {
   padding: 15px 20px;
 }
 
-@media screen and (max-width: 640px) {
-  .swiper-slide img {
-    max-height: 60%;
-  }
+.signup-swiper > .swiper-wrapper {
+  transition-timing-function : linear;
+}
 
-  .overlay img {
-    max-height: 30%;
-    max-width: 80%;
-  }
+@media screen and (max-width: 640px) {
+  /* .swiper-slide img {
+        max-height: 60%;  
+    }
+    .overlay img {
+        max-height: 30%;
+        max-width: 80%;
+    } */
 }
 
 @media (min-width: 768px) {
@@ -804,8 +1081,58 @@ a:hover {
   }
 }
 
+@media (min-width: 1536px) {
+  .\32xl\:container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+
+  @media (min-width: 640px) {
+    .\32xl\:container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .\32xl\:container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .\32xl\:container {
+      max-width: 1024px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .\32xl\:container {
+      max-width: 1280px;
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .\32xl\:container {
+      max-width: 1536px;
+    }
+  }
+}
+
 .visited\:text-white:visited {
   color: rgb(247 247 247 );
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
+}
+
+.hover\:shadow-\[-10px_10px_0_\#222\]:hover {
+  --tw-shadow: -10px 10px 0 #222;
+  --tw-shadow-colored: -10px 10px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:shadow-none:hover {
@@ -833,9 +1160,34 @@ a:hover {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 768px) {
+  .md\:absolute {
+    position: absolute;
+  }
+
+  .md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
+  .md\:mt-52 {
+    margin-top: 13rem;
+  }
+
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:min-h-\[900px\] {
+    min-height: 900px;
+  }
+
   .md\:w-10\/12 {
     width: 83.333333%;
   }
@@ -856,12 +1208,28 @@ a:hover {
     width: 50%;
   }
 
+  .md\:w-8\/12 {
+    width: 66.666667%;
+  }
+
   .md\:w-full {
     width: 100%;
   }
 
+  .md\:w-7\/12 {
+    width: 58.333333%;
+  }
+
+  .md\:max-w-\[80\%\] {
+    max-width: 80%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-row-reverse {
+    flex-direction: row-reverse;
   }
 
   .md\:gap-x-10 {
@@ -873,12 +1241,24 @@ a:hover {
     row-gap: 0px;
   }
 
+  .md\:rounded-2xl {
+    border-radius: 1rem;
+  }
+
   .md\:rounded-3xl {
     border-radius: 1.5rem;
   }
 
-  .md\:rounded-2xl {
-    border-radius: 1rem;
+  .md\:border-s-8 {
+    border-inline-start-width: 8px;
+  }
+
+  .md\:p-10 {
+    padding: 2.5rem;
+  }
+
+  .md\:p-12 {
+    padding: 3rem;
   }
 
   .md\:px-14 {
@@ -891,12 +1271,35 @@ a:hover {
     padding-right: 1rem;
   }
 
+  .md\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .md\:ps-12 {
     padding-inline-start: 3rem;
   }
 
+  .md\:ps-8 {
+    padding-inline-start: 2rem;
+  }
+
   .md\:pt-10 {
     padding-top: 2.5rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-3xl {
@@ -931,6 +1334,10 @@ a:hover {
 }
 
 @media (min-width: 1024px) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
   .lg\:-left-80 {
     left: -20rem;
   }
@@ -939,12 +1346,52 @@ a:hover {
     top: 0px;
   }
 
+  .lg\:-top-20 {
+    top: -5rem;
+  }
+
+  .lg\:right-12 {
+    right: 3rem;
+  }
+
+  .lg\:right-0 {
+    right: 0px;
+  }
+
   .lg\:mt-16 {
     margin-top: 4rem;
   }
 
+  .lg\:-mt-40 {
+    margin-top: -10rem;
+  }
+
+  .lg\:-mt-36 {
+    margin-top: -9rem;
+  }
+
+  .lg\:-mt-32 {
+    margin-top: -8rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:h-screen {
+    height: 100vh;
+  }
+
+  .lg\:w-10\/12 {
+    width: 83.333333%;
   }
 
   .lg\:w-3\/12 {
@@ -959,12 +1406,32 @@ a:hover {
     width: 50%;
   }
 
+  .lg\:w-7\/12 {
+    width: 58.333333%;
+  }
+
   .lg\:w-8\/12 {
     width: 66.666667%;
   }
 
+  .lg\:w-11\/12 {
+    width: 91.666667%;
+  }
+
+  .lg\:max-w-none {
+    max-width: none;
+  }
+
+  .lg\:max-w-\[90\%\] {
+    max-width: 90%;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:flex-row-reverse {
+    flex-direction: row-reverse;
   }
 
   .lg\:items-center {
@@ -978,6 +1445,23 @@ a:hover {
 
   .lg\:gap-y-20 {
     row-gap: 5rem;
+  }
+
+  .lg\:p-28 {
+    padding: 7rem;
+  }
+
+  .lg\:p-10 {
+    padding: 2.5rem;
+  }
+
+  .lg\:p-20 {
+    padding: 5rem;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .lg\:py-20 {
@@ -1022,16 +1506,45 @@ a:hover {
     left: -24rem;
   }
 
+  .xl\:w-10\/12 {
+    width: 83.333333%;
+  }
+
   .xl\:w-7\/12 {
     width: 58.333333%;
+  }
+
+  .xl\:w-9\/12 {
+    width: 75%;
+  }
+
+  .xl\:w-6\/12 {
+    width: 50%;
+  }
+
+  .xl\:max-w-none {
+    max-width: none;
+  }
+
+  .xl\:max-w-\[100\%\] {
+    max-width: 100%;
   }
 
   .xl\:items-center {
     align-items: center;
   }
 
+  .xl\:p-28 {
+    padding: 7rem;
+  }
+
   .xl\:ps-20 {
     padding-inline-start: 5rem;
+  }
+
+  .xl\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .xl\:text-7xl {
@@ -1039,8 +1552,32 @@ a:hover {
     line-height: 1;
   }
 
+  .xl\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
+
   .xl\:text-9xl {
     font-size: 8rem;
+    line-height: 1;
+  }
+
+  .xl\:text-\[30px\] {
+    font-size: 30px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:max-w-\[100\%\] {
+    max-width: 100%;
+  }
+
+  .\32xl\:p-20 {
+    padding: 5rem;
+  }
+
+  .\32xl\:text-7xl {
+    font-size: 4.5rem;
     line-height: 1;
   }
 }
