--- a/views/base.twig
+++ b/views/base.twig
@@ -6,15 +6,22 @@
 	</head>
 {% endblock %}
 
-	<body class="{{body_class}}" data-template="base.twig">
+	<body class="{{body_class}} {{ post.title|lower|replace({' ': '_'}) }}_page scroll-smooth overflow-x-hidden" data-template="base.twig">
+	{% set body_classes = body_class|split(' ') %}
 		{{ function('wp_body_open') }}
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
-		<header class="header py-2">
+		<header class="header py-6 bg-red">
 			{% block header %}
 				<div class="w-full flex justify-center">
 					<div>
 						<h1 class="hdr-logo my-0" role="banner">
-							<a class="hdr-logo-link" href="{{site.url}}" rel="home"><img class="max-w-20" src="/wp-content/uploads/2024/03/rtt_logo_sm.png" alt=""></a>
+							<a class="hdr-logo-link" href="{{site.url}}" rel="home">
+								{% if 'home' in body_classes %}
+									<img class="max-w-20" src="/wp-content/uploads/2025/04/rtt_white_logo.png" alt="">
+								{% else %}
+									<img class="max-w-20" src="/wp-content/uploads/2024/03/rtt_logo_sm.png" alt="">
+								{% endif %}
+							</a>
 						</h1>
 						{# <nav id="nav-main" class="nav-main" role="navigation">
 							{% include "menu.twig" with {'items': menu.get_items} %}
